--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,8 @@ jobs:
           name: Build front-end
           command: |
             # Your code here
+            npm i
+            npm lint
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
