--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,7 @@ jobs:
           name: Build front-end
           command: |
             # Your code here
-            npm i
             npm lint
-            exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -62,7 +60,7 @@ jobs:
           name: Back-end build
           command: |
              # Your code here
-             exit 1
+            npm lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
