--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           name: Build front-end
           command: |
             # Your code here
-            npm lint
+            npm run lint
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -59,8 +59,8 @@ jobs:
       - run:
           name: Back-end build
           command: |
-             # Your code here
-            npm lint
+            # Your code here
+            npm run lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
