--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            # Your code here
-            npm lint
+            cd ~/repositories/udacity/projects/cdond-c3-projectstarter/frontend
+            npm run lint
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -59,8 +59,8 @@ jobs:
       - run:
           name: Back-end build
           command: |
-            # Your code here
-            npm lint
+            cd ~/repositories/udacity/projects/cdond-c3-projectstarter/backend
+            npm run lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
