--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
-            cd ~/cdond-c3-projectstarter/frontend
+            npm install
             npm run lint
       - save_cache:
           paths: [frontend/node_modules]
@@ -59,7 +59,6 @@ jobs:
       - run:
           name: Back-end build
           command: |
-            cd ~/cdond-c3-projectstarter/backend
             npm run lint
       - save_cache:
           paths: [backend/node_modules]
