--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
       - run:
           name: Build front-end
           command: |
+            cd ~/project/frontend
             npm install
             npm run lint
       - save_cache:
@@ -59,6 +60,8 @@ jobs:
       - run:
           name: Back-end build
           command: |
+            cd ~/project/backend
+            npm install
             npm run lint
       - save_cache:
           paths: [backend/node_modules]
