Test the build for frontend and backend once again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
       - run:
           name: Front-end test
           command: |
-            cd /project/frontend
+            cd ~/project/frontend
             npm test
 
   test-backend:
@@ -90,7 +90,7 @@ jobs:
       - run:
           name: Back-end test
           command: |
-            cd /project/backend
+            cd ~/project/backend
             npm test
 
 workflows:
