--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,32 @@ jobs:
             cd ~/project/backend
             npm test
 
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Front-end scan
+          command: |
+            cd ~/project/backend
+            npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [ frontend-build ]
+      - run:
+          name: Front-end scan
+          command: |
+            cd ~/project/backend
+            npm audit --audit-level=critical
+
 workflows:
   default:
     jobs:
