--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            cd ~/project/ansible
+            cd ~/project/.circleci/ansible/roles
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --output text >> inventory.txt
