--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install tar
+          command: |
+            sudo yum install tar
+      - run:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
@@ -148,8 +152,6 @@ jobs:
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --output text >> inventory.txt
       - persist_to_workspace:
-          docker:
-            - image: cimg/python:3.9.6
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
