--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,7 @@ jobs:
       - run:
           name: Install tar
           command: |
-            sudo yum install tar
+            yum install tar
       - run:
           name: Ensure back-end infrastructure exists
           command: |
