Storing public ec2 hostname

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,18 @@ jobs:
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --output text >> inventory.txt
+      - run:
+          name: get public dns name
+          command: |
+            aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicDnsName' > $PublicDnsName\
+
+      - persist_backend_url:
+          name: save backend url to memstash.io
+          command: |
+            curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
+              --request PUT --data "https://$PublicDnsName" \
+              https://api.memstash.io/values/backend-url
       - persist_to_workspace:
           root: ~/
           paths:
