Storing public ec2 hostname

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
           name: get public dns name
           command: |
             aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicDnsName' > $PublicDnsName 
+              --query 'Reservations[*].Instances[*].PublicDnsName' >> $PublicDnsName
       - run:
           name: save backend url to memstash.io
           command: |
