--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,13 +161,17 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicDnsName' \
-              --output text >> $PublicDnsName
+              --output text | cat >> $PublicDnsName
       - run:
           name: save backend url to memstash.io
           command: |
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
               --request PUT --data "https://$PublicDnsName" \
               https://api.memstash.io/values/backend-url
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
 
       # Here's where you will add some code to rollback on failure
 
