--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,8 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicDnsName' \
-              --output text | cat >> $PublicDnsName
+              --output text >> PublicDnsName
+            echo $PublicDnsName
       - run:
           name: save backend url to memstash.io
           command: |
