--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,7 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicDnsName' \
-              --output text >> PublicDnsName
+              --output text >> $PublicDnsName
             echo $PublicDnsName
       - run:
           name: save backend url to memstash.io
