--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,18 +161,19 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicDnsName' \
-              --output text >> PublicDnsName.txt
-            cat PublicDnsName.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/PublicDnsName.txt
+              --output text >> PublicDnsName
+          - save_cache:
+              key: ec2Url
+              paths:
+                - ~/project/.circleci/ansible/PublicDnsName
       - run:
           name: save backend url to memstash.io
+          - restore_cache:
+              key: ec2Url
           command: |
-            cat PublicDnsName.txt >> $PublicDnsName
+            cat PublicDnsName >> $PublicDnsName
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
-              --request PUT --data "https://$PublicDnsName" \
+              --request PUT --data "https://${PublicDnsName}" \
               https://api.memstash.io/values/backend-url
       - run:
           name: on error
