try storing public ec2 hostname

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ jobs:
           save_cache:
             key: ec2Url
               paths:
-                - ~/project/.circleci/ansible/PublicDnsName
+                ~/project/.circleci/ansible/PublicDnsName
       - run:
           name: save backend url to memstash.io
           restore_cache:
