--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ jobs:
           restore_cache:
             key: ec2Url
           command: |
-            cat PublicDnsName >> $PublicDnsName
+            cat PublicDnsName
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
               --request PUT --data "https://${PublicDnsName}" \
               https://api.memstash.io/values/backend-url
