--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,10 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws cloudformation delete-stack-instances --stack-set-name "udacity-frontend-${CIRCLE_WORKFLOW_ID}" \
+              --no-retain-stacks
+            aws cloudformation delete-stack-instances --stack-set-name "udacity-backend-${CIRCLE_WORKFLOW_ID}" \
+              --no-retain-stacks
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -176,7 +178,7 @@ jobs:
               https://api.memstash.io/values/backend-url
       - run:
           name: on error
-          command: echo "Hello Error!"
+          command: destroy_environment
           when: on_fail
 
       # Here's where you will add some code to rollback on failure
