--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,7 @@ jobs:
               https://api.memstash.io/values/backend-url
       - run:
           name: on error
-          command: destroy_environment
+          destroy_environment
           when: on_fail
 
       # Here's where you will add some code to rollback on failure
