delete cf stack on error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,12 +177,9 @@ jobs:
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
               --request PUT --data "https://`cat PublicDnsName`"\
               https://api.memstash.io/values/backend-url
-      - run:
-          name: on error
-          destroy_environment
-          when: on_fail
-
-      # Here's where you will add some code to rollback on failure
+  - when:
+      condition: on_fail
+      destroy_environment
 
 workflows:
   default:
