--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,9 +177,9 @@ jobs:
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
               --request PUT --data "https://`cat PublicDnsName`"\
               https://api.memstash.io/values/backend-url
-  - when:
-      condition: on_fail
-      destroy_environment
+  when:
+    condition: on_fail
+    destroy_environment
 
 workflows:
   default:
