--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,8 +179,8 @@ jobs:
               https://api.memstash.io/values/backend-url
       - run:
           when:
-          condition: on_fail
-          destroy_environment
+            condition: on_fail
+          - destroy_environment
 
 workflows:
   default:
