delete cf stack on error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,7 @@ jobs:
               https://api.memstash.io/values/backend-url
       - run:
           name: run on error
-          destroy_environment
+          destroy_environment:
           when: on_fail
 
 workflows:
