--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,8 +179,7 @@ jobs:
               https://api.memstash.io/values/backend-url
       - run:
           name: run on error
-          - destroy_environment:
-          when: on_fail
+          destroy_environment:
 
 workflows:
   default:
