--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack-instances --stack-set-name "udacity-frontend-${CIRCLE_WORKFLOW_ID}" \
-              --no-retain-stacks
+              --region us-east-1 --no-retain-stacks
             aws cloudformation delete-stack-instances --stack-set-name "udacity-backend-${CIRCLE_WORKFLOW_ID}" \
-              --no-retain-stacks
+              --region us-east-1 --no-retain-stacks
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
