--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,9 +195,9 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory.txt configur-server.yml
+            ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
-
+      - destroy-environment
 workflows:
   default:
     jobs:
