--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,6 +189,12 @@ jobs:
       - attach_workspace:
           at: ~/project/.circleci/ansible/
       - run:
+          name: Install AWS cli
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+      - run:
           name: Install dependencies
           command: |
             apk add --update ansible
