--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
-            apt install curl
+            apk add curl
       - run:
           name: Install AWS cli
           command: |
