--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,11 @@ commands:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
       # Add parameter here.
-    docker:
-      - image: amazon/aws-cli
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            yum install tar -y
-            yum install gzip -y
             aws cloudformation delete-stack --stack-name "udacity-frontend-${CIRCLE_WORKFLOW_ID}"
             aws cloudformation delete-stack --stack-name "udacity-backend-${CIRCLE_WORKFLOW_ID}"
 
@@ -196,6 +192,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
+            apk add awscli
 #            apk add curl
 #      - run:
 #          name: Install AWS cli
