Starting configuration - installing aws cli

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,5 +225,5 @@ workflows:
 #          filters:
 #            branches:
 #              only: [main]
-      - configure-infrastructure:
+      - configure-infrastructure
 #          requires: [deploy-infrastructure]
