--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,7 @@ jobs:
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --output text >> inventory.txt
+            cat inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -193,13 +194,6 @@ jobs:
           command: |
             apk add --update ansible
             pip3 install awscli
-#            apk add curl
-#      - run:
-#          name: Install AWS cli
-#          command: |
-#            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-#            unzip awscliv2.zip
-#            ./aws/install
       - run:
           name: Configure server
           command: |
