--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,6 @@ jobs:
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --output text >> inventory.txt
-            cat inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -199,7 +198,7 @@ jobs:
           name: Configure server
           command: |
             cd ~/project/.circleci/ansible/
-            ansible-playbook -i inventory.txt configure-server.yml
+            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 workflows:
