--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,7 +198,9 @@ jobs:
           name: Configure server
           command: |
             cd ~/project/.circleci/ansible/
-            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt configure-server.yml
+            pwd
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 workflows:
