--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,7 +148,7 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            cd ~/project/.circleci/ansible/roles
+            cd ~/project/.circleci/ansible/
             echo "[web]" > inventory.txt
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
@@ -201,6 +201,7 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment
+
 workflows:
   default:
     jobs:
