--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
             echo "[web]" > inventory.txt
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
-               --filters "Name=tag_value,Values=Udacity-cdond-project-backend" \
+               --filters "Name=tag-value,Values=Udacity-cdond-project-backend" \
                --output text >> inventory.txt
       - persist_to_workspace:
           root: ~/project/.circleci/
