--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,15 +213,16 @@ jobs:
       - run:
           name: Install pg migrate
           command: |
-            - npm install node-pg-migrate pg
+            - npm install node-pg-migrate
       - run:
           name: Run migrations
           command: |
             npm run migrate up > output.txt
             if grep "has been executed successfully" output.txt; then \
               curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
-              --request PUT --data "" \
-              https://api.memstash.io/values/migration-d5d144df-a14a-4d0d-aab3-d2ce1af678b9migration_${CIRCLE_WORKFLOW_ID}; fi
+              --request PUT --data "1" \
+              https://api.memstash.io/values/migration-d5d144df-a14a-4d0d-aab3-d2ce1af678b9migration_${CIRCLE_WORKFLOW_ID}; \
+            fi
       - run:
           name: Send migration results to memstash
           command: |
