--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,12 +213,12 @@ jobs:
       - run:
           name: Install pg migrate
           command: |
+            npm install
             npm install node-pg-migrate pg
       - run:
           name: Run migrations
           command: |
-            npm run migrate up > output.txt
-            cat output.txt
+            npm run migrate up 
             if grep "has been executed successfully" output.txt; then \
               curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
               --request PUT --data "1" \
