--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,10 +1,11 @@
-- name: "Install dependencies for PostgreSQL"
+- name: Install dependencies for PostgreSQL
   apt: name={{ item }} update_cache=true state=latest
   with_items:
   - bash
   - openssl
   - libssl-dev
   - libssl-doc
+
 - name: Install PostgreSQL
   apt: name={{ item }} update_cache=true state=present
   with_items:
@@ -12,6 +13,7 @@
   - postgresql-contrib
   - libpq-dev
   - python3-psycopg2
+
 - name: Ensure the PostgreSQL service is running
   service: name=postgresql state=started enabled=yes
 - name: Create the database specified in vars
@@ -20,6 +22,7 @@
   postgresql_db: name={{ db_name }}
     template='template0'
     state=present
+
 - name: Ensure user has access to the new database
   become: true
   become_user: postgres
@@ -28,6 +31,7 @@
     password={{ db_password }}
     priv=ALL
     state=present
+
 - name: Ensure user does not have unnecessary permissions
   become: true
   become_user: postgres
