--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,7 +214,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
+            npm install node-ansible --save
             pip3 install awscli
       # attach workspace
       - attach_workspace:
