--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,6 +215,7 @@ jobs:
           name: Install dependencies
           command: |
             npm install node-ansible --save
+            npm audit fix
             pip3 install awscli
       # attach workspace
       - attach_workspace:
