--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,7 +216,7 @@ jobs:
           name: Install dependencies
           command: |
             npm install node-pg-migrate pg
-            sudo apt-get install postgresql-client
+            npm install postgresql-client
       # attach workspace
       - attach_workspace:
           at: ~/project/.circleci/
