Try running pgmigrate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,8 +223,8 @@ jobs:
       - run:
           name: Run migrations
           command: |
-            cd ~/node_modules/node-pg-migrate/bin/
-            node-pg-migrate up - d $TYPEORM_HOST
+#            cd ~/node_modules/node-pg-migrate/bin/
+            ./node-pg-migrate up - d ${TYPEORM_HOST}
 #            ansible-playbook -i inventory.txt deploy-backend.yml
 #            if grep "has been executed successfully" output.txt; then \
 #              curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
