Try running pgmigrate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,6 @@ jobs:
           name: Add back-end ip to ansible inventory
           command: |
             cd ~/project/.circleci/ansible/
-            echo "[web]" > inventory.txt
             aws ec2 describe-instances \
                --query 'Reservations[*].Instances[*].PublicIpAddress' \
                --filters "Name=tag-value,Values=Udacity-cdond-project-backend" \
@@ -214,7 +213,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            npm install node-pg-migrate pg
+            npm install node-pg-migrate
             npm install postgresql-client
       # attach workspace
       - attach_workspace:
@@ -224,8 +223,6 @@ jobs:
           command: |
             echo $TYPEORM_HOST
             echo ${TYPEORM_HOST}
-            curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
-              --request PUT --data "1"
 #            node-pg-migrate up - d $TYPEORM_HOST
 #            ansible-playbook -i inventory.txt deploy-backend.yml
 #            if grep "has been executed successfully" output.txt; then \
@@ -235,8 +232,9 @@ jobs:
       - run:
           name: Send migration results to memstash
           command: |
-            # Your code here
-            exit 1
+            curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
+              --request PUT --data "1" \
+              https://api.memstash.io/values/migration-d5d144df-a14a-4d0d-aab3-d2ce1af678b9migration_${CIRCLE_WORKFLOW_ID}
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 
