Try running pgmigrate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,9 +232,10 @@ jobs:
       - run:
           name: Send migration results to memstash
           command: |
+            echo ${CIRCLE_WORKFLOW_ID}
             curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
               --request PUT --data "1" \
-              https://api.memstash.io/values/migration-d5d144df-a14a-4d0d-aab3-d2ce1af678b9migration_${CIRCLE_WORKFLOW_ID}
+              https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID}
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 
