--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,30 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment
 
+  deploy-frontend:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
+            BACKEND_IP = curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
+              GET https://api.memstash.io/values/backend-url
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+      - run:
+          name: Deploy frontend objects
+          command: |
+            npm run build
+      # Here's where you will add some code to rollback on failure
+
 workflows:
   default:
     jobs:
