--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,7 @@ jobs:
       - run:
           name: Run migrations
           command: |
-            echo $TYPEORM_HOST
-            echo ${TYPEORM_HOST}
+            echo "${TYPEORM_HOST}"
 #            node-pg-migrate up - d $TYPEORM_HOST
 #            ansible-playbook -i inventory.txt deploy-backend.yml
 #            if grep "has been executed successfully" output.txt; then \
@@ -232,7 +231,7 @@ jobs:
       - run:
           name: Send migration results to memstash
           command: |
-            echo ${CIRCLE_WORKFLOW_ID}
+            echo "${CIRCLE_WORKFLOW_ID}"
             curl -H "Content-Type: text/plain" -H "token: 4a79f8c5-dbf1-446c-bbdb-aeb7df391ab5" \
               --request PUT --data "1" \
               https://api.memstash.io/values/${CIRCLE_WORKFLOW_ID}
@@ -253,8 +252,9 @@ jobs:
           name: Get backend url
           command: |
             # your code here
-            BACKEND_IP = curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
+            export BACKEND_IP=curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
               GET https://api.memstash.io/values/backend-url
+            echo "${BACKEND_IP}"
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
       - run:
@@ -262,6 +262,7 @@ jobs:
           command: |
             npm run build
       # Here's where you will add some code to rollback on failure
+      - destroy-environment
 
 workflows:
   default:
