Try running pgmigrate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,6 +248,7 @@ jobs:
           name: Install dependencies
           command: |
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh
+            cd ~/.nvm
             nvm.sh
             nvm install node
             node -e "console.log('Running Node.js ' + process.version)"
