--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y nodejs
+            yum install -y npm
 #            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh
 #            ./install.sh
 #            cd ~/.nvm
