--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,13 +247,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y npm
-#            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh
-#            ./install.sh
-#            cd ~/.nvm
-#            ./nvm.sh
-#            nvm install node
-#            node -e "console.log('Running Node.js ' + process.version)"
+            yum upgrade -y npm
       - run:
           name: Get backend url
           command: |
