--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,14 +240,14 @@ jobs:
 
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            yum upgrade -y npm
+#      - run:
+#          name: Install dependencies
+#          command: |
+#            yum upgrade -y npm
       - run:
           name: Get backend url
           command: |
