--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            python -m pip install awscli
+            npm install aws-cli
       - run:
           name: Get backend url
           command: |
